syntax = "proto3";

option go_package = "github.com/YukiOnishi1129/techpicks/article";

package checkpicks.content.v1;

import "google/protobuf/wrappers.proto";
import "content/platform.proto";
import "content/feed.proto";


service ArticleService {
  rpc GetArticles(GetArticleRequest) returns (GetArticleResponse);
}


message GetArticleRequest {
  google.protobuf.StringValue userId = 1;
  google.protobuf.StringValue languageStatus = 2;
  google.protobuf.StringValue tag = 3;
  string cursor = 4;
  int64 limit = 5;
}

message GetArticleResponse {
  repeated Article articles = 1;
}

message Article {
    string id = 1;
    Platform platform = 2;
    repeated Feed feeds = 3;
    string title = 4;
    string description = 5;
    string articleUrl = 6;
    string publishedAt = 7;
    google.protobuf.StringValue authorName = 8;
    google.protobuf.StringValue tags = 9;
    string thumbnailUrl = 10;
    bool isEng = 11;
    bool isPrivate = 12;
    google.protobuf.StringValue bookmarkId = 13;
    bool isBookmarked = 14;
    bool isFollowing = 15;
    repeated string favoriteArticleFolderIds = 16;
    int64 likeCount = 17;
    bool isTrend = 18;
    string createdAt = 19;
    string updatedAt = 20;
}